--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
+    <title>A Rust-based simple example using rxrust and wasm-bindgen</title>
   </head>
   <body>
   </body>
